Change special keys' highlight font color.
Signed-off-by: Jianmin Zhou <jianmin.zhou@acadine.com>

--- a/apps/keyboard/style/keyboard.css
+++ b/apps/keyboard/style/keyboard.css
@@ -193,7 +193,8 @@ button::-moz-focus-inner {
 
 /* Highlight for special keys */
 .keyboard-key.special-key.highlighted > .visual-wrapper > .key-element {
-  color: #00b8d6;
+  /*color: #00b8d6;*/
+  color: #ffffff;
 }
 
 .keyboard-key.special-key.highlighted > .visual-wrapper:before,
