--- a/apps/settings/style/icons.css
+++ b/apps/settings/style/icons.css
@@ -61,7 +61,7 @@ label > .menu-item + small {
 aside.pack-end {
   position: absolute;
   z-index: 2;
-  right: 1.5rem;
+  left: 0.5rem;
   margin: 0 0 0 0.5rem;
   text-align: right;
  }
