--- a/shared/elements/gaia_switch/style.css
+++ b/shared/elements/gaia_switch/style.css
@@ -48,7 +48,7 @@ label.pack-switch input:checked ~ span:after {
  * ---------------------------------- */
 
 label.pack-switch input ~ span:after {
-  content: '';
+  content: 'OFF';
   position: absolute;
   right: 0;
   top: 50%;
@@ -57,13 +57,13 @@ label.pack-switch input ~ span:after {
   height: 2.7rem;
   border-radius: 1.35rem;
   overflow: hidden;
-  background: #e6e6e6 url(images/background_off.png) no-repeat -3.2rem 0 / 9.2rem 2.7rem;
   transition: background 0.2s ease;
+  color: #1b6dec;
 }
 
 /* switch: 'ON' state */
 label.pack-switch input:checked ~ span:after {
-  background: #e6e6e6 url(images/background.png) no-repeat 0 0 / 9.2rem 2.7rem;
+  content: 'ON';
 }
 
 /* switch: disabled state */
