update background image in rtsp-player and main page.

--- a/apps/rtsp-player/style/player.css
+++ b/apps/rtsp-player/style/player.css
@@ -6,6 +6,10 @@ html, body {
   overflow: hidden;
 }
 
+body {
+  background-image: url("./video_background.jpg");
+}
+
 .videoContainer {
   overflow: hidden;
   float: left;
